fix label on checkbox fix surface background color fix postion ordering for panel hoist select enhanced id from select element auto close navigation on mobile on nigate fix anchored surface add class to hide number wrrows input update docs

--- a/src/components/checkbox/external.scss
+++ b/src/components/checkbox/external.scss
@@ -24,6 +24,12 @@ mdw-checkbox.mdw-density-comfortable + label,
   line-height: 32px;
 }
 
+.mdw-density-compact mdw-checkbox+label,
+mdw-checkbox.mdw-density-compact+label,
+.mdw-density-compact label.mdw-checkbox-label {
+    line-height: 34px;
+}
+
 .mdw-density-compact mdw-checkbox,
 mdw-checkbox.mdw-density-compact {
   padding: 5px;
