--- a/src/components/panel/external.scss
+++ b/src/components/panel/external.scss
@@ -19,7 +19,7 @@ mdw-panel {
               0 3px 14px 2px rgba(0,0,0,.12);
   /* transition: opacity .03s linear,
               transform .12s cubic-bezier(0,0,.2,1); */
-  background-color: var(--mdw-theme-background);
+  background-color: var(--mdw-theme-surface);
   color: var(--mdw-theme-on-surface);
 }
 
