--- a/src/components/text-field/external.scss
+++ b/src/components/text-field/external.scss
@@ -31,6 +31,21 @@ mdw-textfield {
   border-bottom-color: var(--mdw-theme-textfield-underline-color);
   background-color: var(--mdw-theme-textfield-background-fill-color);
 
+  &.mdw-hide-arrows {
+    /* hide number input arrows */
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    /* Firefox */
+    input[type=number] {
+      -moz-appearance: textfield;
+    }
+  }
+
   &.block {
     display: block;
   }
@@ -527,6 +542,10 @@ mdw-textfield {
     transition: opacity .15s cubic-bezier(.4,0,.2,1);
     opacity: 0;
     will-change: opacity;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 90%;
     color: var(-textfield-on-secondary);
 
     &[persistent] {
